--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/tabsDocAsistencias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/tabsDocAsistencias.html.twig
@@ -6,10 +6,10 @@
    {{ fecha|date("m/d/Y") }}#}
   <ul class="nav nav-tabs">
     <li class="active"><a  data-toggle="tab" class="tabNotas" id="consulta">Consulta de Asistencias</a></li>
-    {% if fecha != '' %}
+    <!-- {% if fecha != '' %}
     <li><a data-toggle="tab" class="tabNotas"  id="ingreso">Ingreso de Asistencias</a></li>
-    {% endif %}
-    <li><a data-toggle="tab" class="tabNotas"  id="actualiza">Actualización de Asistencias</a></li>
+    {% endif %} -->
+    <li><a data-toggle="tab" class="tabNotas"  id="actualiza">Mantenimiento de Asistencias</a></li>
      {#<li><a data-toggle="tab" class="tabNotas"  id="ingreso2">Listar Alumnos</a></li>#}
   </ul>
 
