--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
@@ -4,7 +4,7 @@
 
         <script>
             
-
+            var modelessSetMatricula;
             function onFinishCallback() {
                 alert('Finish Clicked');
             }
@@ -143,12 +143,8 @@
 
                             else
                             { 
-                                var modelessSetMatricula;
-                                modelessSetMatricula = new $.flavr({
-                                    modal: true,
-                                    content: '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Procesando Registro...</b>',
-                                    buttons: {}
-                                });
+
+                               
 
                                 var idEstudiante='{{idEstudiante}}';
                                 var idCarrera='{{idCarrera}}';
@@ -164,18 +160,25 @@
                                      data: obj_data,
                                      type:  'post',
                                      async: false,
-                                     beforeSend: function () {                                                              
+                                     beforeSend: function () {
+                                         modelessSetMatricula = new $.flavr({
+                                          modal: true,
+                                          content: '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Procesando Registro...</b>',
+                                          buttons: {}
+                                      });  
+
                                      },
                                      success:  function (dataResponse) {
                                         modelessSetMatricula.close();
                                        var respuesta=jQuery.parseJSON(dataResponse);
+                                       //var modelessProcesoMat;
                                        $("#div_respuesta").html(respuesta.mensaje);
                                        if (respuesta.codigo_error!=1)
                                        {
                                             $('.botonMatriculaSig').addClass('buttonDisabled');
                                             $('.botonAnterior').removeClass('buttonDisabled');
                                             $("#btninscribe").attr("disabled", false);
-                                             modelessProcesoMat= new $.flavr({
+                                             modelessSetMatricula= new $.flavr({
                                                            modal   : true,
                                                            content : respuesta.mensaje,
                                                            buttons     : {
@@ -190,7 +193,7 @@
                                             $('.botonMatriculaSig').removeClass('buttonDisabled');
                                             $("#btninscribe").remove();
                                             $(".botonMatriculaSig").show();
-                                            modelessProcesoMat= new $.flavr({
+                                            modelessSetMatricula = new $.flavr({
                                                            modal   : true,
                                                            content : 'Sr. Estudiante, su  registro fue procesado correctamente <br> Enviando notificación, por favor espere <br> <i class="fa fa-refresh fa-spin"></i>',
                                                            buttons     : {
@@ -217,7 +220,7 @@
                                                   $("#div_respuesta").html(respuesta.mensaje);
                                                   if (respuesta.codigo_error!=1)
                                                   {
-                                                        modelessProcesoMat= new $.flavr({
+                                                        modelessSetMatricula= new $.flavr({
                                                                       modal   : true,
                                                                       content : respuesta.mensaje,
                                                                       buttons     : {
@@ -228,7 +231,7 @@
                                                   }
                                                   else
                                                   {
-                                                   modelessProcesoMat= new $.flavr({
+                                                   modelessSetMatricula= new $.flavr({
                                                                       modal   : true,
                                                                       content : 'Notificación enviada exitosamente.',
                                                                       buttons     : {
@@ -240,17 +243,14 @@
                                                  error: function(dataResponse)
                                                  {
                                                    modelessSetMatricula.close();  
-                                                   modelessProcesoMat= new $.flavr({
+                                                   modelessSetMatricula= new $.flavr({
                                                                       modal   : true,
                                                                       content : "No se pudo envíar la notificación.",
                                                                       buttons     : {
                                                                          primary : { text: 'Aceptar', style: 'primary' }
                                                                       }
                                                                    });
-                                                   {#form="accordion";
-                                                   msg_alert = alert_bootstrap( form, 'Atenci&oacute;n', "No se pudo envíar la notificación.", 'sm', 'alert');
-                                                                   $( '#'+form ).append( msg_alert );
-                                                                   $('#modal-'+form).modal('show');#}
+                                                
                                                  },                                       
                                                 dataType:'text'
                                             });
@@ -389,7 +389,7 @@
             }
 
 
-        </script>
+        </script>        
             <div class="col-lg-12">
             <div class="table-responsive">
             <div class="col-md-12 col-sm-12 col-xs-12">
