--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_matriculacion2.html.twig
@@ -120,8 +120,8 @@
                             }
 
                             else{ 
-                                var modelessSetMatricula;
-                                modelessSetMatricula = new $.flavr({
+                                //var modelessSetMatricula;
+                                modelessProcesoMat = new $.flavr({
                                     modal: true,
                                     content: '<i class="fa fa-refresh fa-spin"></i> &nbsp;<b>Procesando Registro...</b>',
                                     buttons: {}
@@ -142,6 +142,7 @@
                                      type:  'post',
                                      async: false,
                                      beforeSend: function () {  
+                                         modelessProcesoMat.close();
                                          modelessProcesoMat= new $.flavr({
                                                            modal   : true,
                                                            content : 'Procesando, por favor espere <br> <i class="fa fa-refresh fa-spin"></i>',
@@ -150,7 +151,8 @@
                                                         });
                                      },
                                      success:  function (dataResponse) {
-                                        modelessSetMatricula.close();
+                                        // modelessSetMatricula.close();  
+                                        modelessProcesoMat.close();
                                        var respuesta=jQuery.parseJSON(dataResponse);
                                        $("#div_respuesta").html(respuesta.mensaje);
                                        if (respuesta.codigo_error!=1)
@@ -169,24 +171,24 @@
                                            
                                        }
                                         else{
-                                                   modelessProcesoMat= new $.flavr({
-                                                                      modal   : true,
-                                                                      content : 'Matriculación realizada exitosamente.',
-                                                                      buttons     : {
-                                                                          primary : { text: 'Aceptar', style: 'primary' }
-                                                                      }
-                                                                   });
-                                                                        $('.botonMatriculaSig').addClass('buttonDisabled');
+                                            
+                                           {# modelessProcesoMat= new $.flavr({
+                                                 modal   : true,
+                                                 content : 'Matriculación realizada exitosamente.',
+                                                 buttons     : {
+                                                     primary : { text: 'Aceptar', style: 'primary' }
+                                                 }
+                                              });#}
+                                            $('.botonMatriculaSig').addClass('buttonDisabled');
                                             $('.botonAnterior').removeClass('buttonDisabled');
                                             $("#btninscribe").attr("disabled", false);
                                                               
-                                            enviar_correo = 1;
-                                            
+                                            enviar_correo = 1;                                            
                                         }
                                      },
                                       error: function(dataResponse)
                                       {
-                                        modelessSetMatricula.close();
+                                        modelessProcesoMat.close();
                                           //nlanzarModal('Cargado', 'fue cargado', 'cerrar');
                                           //tablaNotasa.html("No fue posible conectar con el Servidor");
                                         form="accordion";
@@ -209,21 +211,23 @@
                                                 url:   jumpAction,
                                                 data: obj_data,
                                                 type:  'post',
-                                                async: true,
+                                                async: false,
                                                 beforeSend: function () {      
                                                     modelessProcesoMat= new $.flavr({
                                                            modal   : true,
-                                                           content : 'Enviando notificación, por favor espere <br> <i class="fa fa-refresh fa-spin"></i>',
+                                                           content : 'Matriculación realizada exitosamente <br> <br> Enviando notificación, por favor espere <br> <i class="fa fa-refresh fa-spin"></i>',
                                                            buttons     : {
                                                            }
                                                         });
                                                 },
                                                 success:  function (dataResponse) {
-                                                   modelessSetMatricula.close();
+                                                   // modelessSetMatricula.close();  
+                                                  modelessProcesoMat.close();
                                                   var respuesta=jQuery.parseJSON(dataResponse);
                                                   $("#div_respuesta").html(respuesta.mensaje);
                                                   if (respuesta.codigo_error!=1)
                                                   {
+                                                        modelessProcesoMat.close();
                                                         modelessProcesoMat= new $.flavr({
                                                                       modal   : true,
                                                                       content : respuesta.mensaje,
@@ -246,10 +250,10 @@
                                                 },
                                                  error: function(dataResponse)
                                                  {
-                                                   modelessSetMatricula.close();  
+                                                   modelessProcesoMat.close();  
                                                    modelessProcesoMat= new $.flavr({
                                                                       modal   : true,
-                                                                      content : "No se pudo envíar la notificación.",
+                                                                      content : "Su matriculación fue exitosa. <br><br> No se pudo envíar el mensaje",
                                                                       buttons     : {
                                                                          primary : { text: 'Aceptar', style: 'primary' }
                                                                       }
@@ -259,11 +263,8 @@
                                                 dataType:'text'
                                             });
                                             // in envia correo #}
-                            }
-            });
-
-
-
+                                         }  
+                                     });
 
                function siguiente(){
                 $(".botonMatriculaSig").on("click",function(event){
@@ -463,7 +464,7 @@
                                 <div><p>&nbsp;</p></div> 
                             <h4 align="center" ><b>Condiciones de Registro</b></h4>
                             
-                              <p align="center">Sr. Estudiante una vez  registrado no es posible reversar el proceso. Presiones siguiente para iniciar el proceso </p>  
+                              <p align="center">Sr. Estudiante una vez  registrado no es posible reversar el proceso. Presione siguiente para iniciar el proceso </p>  
 
                         </div>
                         <div id="step-2" class="tab2">
