--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_inscripcion.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_inscripcion.html.twig
@@ -10,7 +10,7 @@
                  {%  endif %}
                     <div class="table-responsive">
 
-                      {%if (identificacion!='' and EstadoAlumno=='REGISTRADO' )%}
+                      <!-- {%if (identificacion!='' and EstadoAlumno=='REGISTRADO' )%}
                         <table  align='center' border='0' id="table-documentos">   
                             <thead> 
                                 <tr>
@@ -42,7 +42,7 @@
                             </tr>
 
                         </table>
-                      {% endif %}
+                      {% endif %} -->
                     
                     <table  align='center' class="table table-bordered table-hover" id="table-listarpago">
                       <caption STYLE="text-align:center;font-size: 15px;"><label>{{ estudiante }}{{ estudiante_ap }}    -    Nº. Identificación: {{ identificacion }}    -    Estado de Matricula: {{ EstadoAlumno }}</label></caption>
